# gcp-dragen

./: .gitignore  CONTRIBUTING  README.md  README_new.md  SET  activate  batch_job_test.sh  call_with_params.sh  copy_to_gcs.sh  cram_options  csr.txt  deploy.sh  doit.sh  doit_batch.sh  ek-ssh-test  illumina-dragen_v1.2-rc.2_ek  jarvice-dragen-stub.sh-v1.0-rc.2  jarvice-dragen-stub.sh-v1.1  jarvice-dragen-stub.sh-v1.2  jarvice-dragen-stub.sh-v1.2-rc  run_atos_403.sh  run_cram_378.sh  run_cram_378_dry_run.sh  run_cram_403.sh  run_fastq_310.sh  run_fastq_403.sh  run_test_batch.sh  run_test_jobs.sh  setup.sh  start_pipeline.sh  steps.md  test_batch_job.sh
archive/: call_with_params.sh  doit.sh  doit_batch.sh  setup.sh
cloud_function/: batch_config.json  config.sample.json  main.py  requirements.txt
common/: cloudbuild.yaml  pyproject.toml  requirements.txt
common/src/commonek/: batch_helper.py  bq_helper.py  csv_helper.py  dragen_command_helper.py  gcs_helper.py  helper.py  logging.py  params.py  slack.py
data/: Ex-Dragen-Command-CRAM  Ex-Dragen-Command-FASTQ_LIST  Ex-orafile  NA12878_batch.txt  bq_schema  bq_task_schema  cram_list.txt  dragen_help.txt  fastq_sample  status_header.csv
docs/: Data_Preparation.md
examples/: google-batch.sh  google-batch_ek.sh  prepare.sh
setup/: .env.sample  add_slack_secret.sh  bq_task_status_schema.json  build_package.sh  check_setup.sh  create_env_file.sh  deploy.sh  deploy_cf.sh  init_env_vars.sh  init_foundation.sh  set_slack_secret.sh  setup.sh  setup_all.sh  setup_terraform.sh  update_gcp_org_policies.sh
tests/: jobs.csv  (+3 more)
(+92 files in other folders)
