[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commonek"
version = "0.0.2"
authors = [
    { name="Eva Khmelinskaya", email="evekhm@google.com" },
]
description = "A common private package for illumina dragen integration project"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]